--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "slack-questionbot",
   "version": "1.0.0",
-  "description": "A bot for Slack that recieves questions and posts them to a channel, anonymizing the person who sent the message.",
+  "description": "A bot for Slack used to ask anonymous questions.",
   "main": "slack-questionbot.js",
   "scripts": {
     "start": "meteor --settings settings.json"
